--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 </head>
 <body>
     <header>
-        <h1 id="home">Student Name</h1>
+        <h1 id="home">Brady Gorman</h1>
         <nav>
             <a href="#home">HOME</a>
             <a href="#portfolio">PORTFOLIO</a>
+            <a href="#skills">SKILLS</a>
             <a href="#contact">CONTACT</a>
         </nav>
     </header>
@@ -57,6 +58,9 @@
                 <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
                 </li>
         </ul>
+
+        <h3 id="skills">SKILLS</h3>
+        <p>I am proficient in HTML, CSS, and Javascript while aspiring to developing in PHP, Ruby Rails, and C+. I'm also skilled in hardware troubleshooting and Azure/Windows Active Directory management.</p>
     </main>
 
     <footer>
@@ -70,10 +74,11 @@
         <p>Email</p>  <p class="info">email@yoursite.com</p> 
         </div>
         <div id="bottom_menu">
-            <h3>Student name</h3>
+            <h3>Brady Gorman</h3>
              <nav id="bottom_nav">
                  <a href="#home">HOME</a>
                  <a href="#portfolio">PORTFOLIO</a>
+                 <a href="#skills">SKILLS</a>
                  <a href="#contact">CONTACT</a>
              </nav>
              <a id="top" href="#home">Back to Top</a>
