--- a/index.html
+++ b/index.html
@@ -22,50 +22,50 @@
     </header>
     <main>
         <div id="profile">
-            <img id="profile_image" src="/images/responsive-layout-profile.png" alt="Profile-image">
+            <img id="profile_image" src="images/responsive-layout-profile.png" alt="Profile-image">
             <p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished learning front-end web development at Treehouse and am excited to put all my skills to use!</p>
         </div>
         <h3 id="portfolio">PORTFOLIO</h3>
         
         <ul>
-            <li><img class="portfolio_image" src="/images/portfolio-1.png" alt="portfolio-1">
+            <li><img class="portfolio_image" src="images/portfolio-1.png" alt="portfolio-1">
                 <h3>Marketing Page</h3>
                 <p>This project shows the front end of a marketing website meant for a specific business I'm interested in.</p>
                 </li>
 
-            <li><img class="portfolio_image" src="/images/portfolio-2.png" alt="portfolio-2">
+            <li><img class="portfolio_image" src="images/portfolio-2.png" alt="portfolio-2">
                 <h3>Search Page</h3>
                 <p>This project searches through a specific database to find information that the user is trying to look up.</p>
                 </li>
 
-            <li><img class="portfolio_image" src="/images/portfolio-3.png" alt="portfolio-3">
+            <li><img class="portfolio_image" src="images/portfolio-3.png" alt="portfolio-3">
                 <h3>Travel App</h3>
                 <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
                 </li>
 
-            <li><img class="portfolio_image" src="/images/portfolio-4.png" alt="portfolio-4">
+            <li><img class="portfolio_image" src="images/portfolio-4.png" alt="portfolio-4">
                 <h3>Map of Favorite Spots</h3>
                 <p>This project uses mapps apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
                 </li>
                 
-            <li><img class="portfolio_image" src="/images/portfolio-5.png" alt="portfolio-5">
+            <li><img class="portfolio_image" src="images/portfolio-5.png" alt="portfolio-5">
                 <h3>Photo Gallery</h3>
                 <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
                 </li>
 
-            <li><img class="portfolio_image" src="/images/portfolio-6.png" alt="portfolio-6">
+            <li><img class="portfolio_image" src="images/portfolio-6.png" alt="portfolio-6">
                 <h3>Calculator</h3>
                 <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
                 </li>
         </ul>
 
         <h3 id="skills">SKILLS</h3>
-        <p>I am proficient in HTML, CSS, and Javascript while aspiring to developing in PHP, Ruby Rails, and C+. I'm also skilled in hardware troubleshooting and Azure/Windows Active Directory management.</p>
+        <p class="paragraph">I am proficient in HTML, CSS, and Javascript while aspiring to developing in PHP, Ruby Rails, and C+. I'm also skilled in hardware troubleshooting and Azure/Windows Active Directory management.</p>
     </main>
 
     <footer>
        <h4 id="contact">CONTACT</h4>
-       <p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
+       <p class="paragraph">If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
        <br>
        <div class="messaging">
        <p>Phone</p>  <p class="info">+1 (111) 555-1234</p>
