--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <header>
-        <h1 id="home">Brady Gorman</h1>
+    <header id="home">
+        <h1>Brady Gorman</h1>
         <nav>
             <a href="#home">HOME</a>
             <a href="#portfolio">PORTFOLIO</a>
@@ -25,7 +25,8 @@
             <img id="profile_image" src="images/responsive-layout-profile.png" alt="Profile-image">
             <p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished learning front-end web development at Treehouse and am excited to put all my skills to use!</p>
         </div>
-        <h3 id="portfolio">PORTFOLIO</h3>
+        <div id="portfolio">
+        <h3>PORTFOLIO</h3>
         
         <ul>
             <li><img class="portfolio_image" src="images/portfolio-1.png" alt="portfolio-1">
@@ -58,9 +59,11 @@
                 <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
                 </li>
         </ul>
-
-        <h3 id="skills">SKILLS</h3>
+    </div>
+    <div id="skills">
+        <h3>SKILLS</h3>
         <p class="paragraph">I am proficient in HTML, CSS, and Javascript while aspiring to developing in PHP, Ruby Rails, and C+. I'm also skilled in hardware troubleshooting and Azure/Windows Active Directory management.</p>
+    </div>
     </main>
 
     <footer>
