--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <header id="home">
+    <header id="home" class="col">
         <h1>Brady Gorman</h1>
-        <nav>
+        <nav class="col">
             <a href="#home">HOME</a>
             <a href="#portfolio">PORTFOLIO</a>
             <a href="#skills">SKILLS</a>
@@ -21,14 +21,14 @@
         </nav>
     </header>
     <main>
-        <div id="profile">
+        <div id="profile" class="col">
             <img id="profile_image" src="images/responsive-layout-profile.png" alt="Profile-image">
             <p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished learning front-end web development at Treehouse and am excited to put all my skills to use!</p>
         </div>
         <div id="portfolio">
         <h3>PORTFOLIO</h3>
         
-        <ul>
+        <ul class="col">
             <li><img class="portfolio_image" src="images/portfolio-1.png" alt="portfolio-1">
                 <h3>Marketing Page</h3>
                 <p>This project shows the front end of a marketing website meant for a specific business I'm interested in.</p>
@@ -66,7 +66,7 @@
     </div>
     </main>
 
-    <footer>
+    <footer class="col">
        <h4 id="contact">CONTACT</h4>
        <p class="paragraph">If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
        <br>
