--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <header id="home" class="col">
+    <header id="home">
         <h1>Brady Gorman</h1>
-        <nav class="col">
+        <nav>
             <a href="#home">HOME</a>
             <a href="#portfolio">PORTFOLIO</a>
             <a href="#skills">SKILLS</a>
@@ -21,14 +21,14 @@
         </nav>
     </header>
     <main>
-        <div id="profile" class="col">
+        <div id="profile">
             <img id="profile_image" src="images/responsive-layout-profile.png" alt="Profile-image">
             <p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished learning front-end web development at Treehouse and am excited to put all my skills to use!</p>
         </div>
-        <div id="portfolio">
+        <div>
         <h3>PORTFOLIO</h3>
         
-        <ul class="col">
+        <ul>
             <li><img class="portfolio_image" src="images/portfolio-1.png" alt="portfolio-1">
                 <h3>Marketing Page</h3>
                 <p>This project shows the front end of a marketing website meant for a specific business I'm interested in.</p>
@@ -60,13 +60,12 @@
                 </li>
         </ul>
     </div>
-    <div id="skills">
+    <div>
         <h3>SKILLS</h3>
-        <p class="paragraph">I am proficient in HTML, CSS, and Javascript while aspiring to developing in PHP, Ruby Rails, and C+. I'm also skilled in hardware troubleshooting and Azure/Windows Active Directory management.</p>
+        <p class="paragraph">I am proficient in HTML, CSS, and Javascript while aspiring to developing in PHP, Ruby on Rails, and C++. I'm also skilled in hardware troubleshooting and Azure/Windows Active Directory management.</p>
     </div>
     </main>
-
-    <footer class="col">
+    <footer>
        <h4 id="contact">CONTACT</h4>
        <p class="paragraph">If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
        <br>
@@ -86,7 +85,6 @@
              </nav>
              <a id="top" href="#home">Back to Top</a>
          </div>
-    </footer>
-     
+    </footer> 
 </body>
 </html>
