--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished learning front-end web development at Treehouse and am excited to put all my skills to use!</p>
         </div>
         <div>
-        <h3>PORTFOLIO</h3>
+        <h3 id="portfolio">PORTFOLIO</h3>
         
         <ul>
             <li><img class="portfolio_image" src="images/portfolio-1.png" alt="portfolio-1">
@@ -61,7 +61,7 @@
         </ul>
     </div>
     <div>
-        <h3>SKILLS</h3>
+        <h3 id="skills">SKILLS</h3>
         <p class="paragraph">I am proficient in HTML, CSS, and Javascript while aspiring to developing in PHP, Ruby on Rails, and C++. I'm also skilled in hardware troubleshooting and Azure/Windows Active Directory management.</p>
     </div>
     </main>
